client-reactjs/src/index.css
@import '~antd/dist/antd.css';
body {
  margin: 0;
}

.logo {
  color: #ff5722;
  font-size: 2.17em;
  margin: 0px 24px 16px 0;
  float: left;
}

.login-logo {
  color: #ff5722;
}


.chart { width: 900px; margin: 5px; margin: 15px auto; border-radius: 3px; }

.node { font-size: 11px; }

.node.big-commpany {
  cursor: pointer;
  padding: 0 2px;
  text-align: center;
  height: 3em;
  line-height: 28px;
  border: 0.1em dotted #d4e06b;
  border-radius: 0.5em;
  box-shadow: 1px 1px 1px rgba(0,0,0,.5);
  background: #fff;
}
.node.big-commpany:active {
  box-shadow: inset 1px 1px 1px rgba(0,0,0,.1);
  margin: 1px 0 0 1px;
  border: 2px solid #D3D3CB;
}

.node.big-commpany .node-name {
  line-height: 30px;
  color: #000;
  display: inline-block;
  padding-left: 5px;
  padding-right: 15px;
}

.node.big-commpany:hover .node-name {
  color: #8B8B8B;
}

.node.big-commpany:hover .nodedelete{
  display: block;
}

.node.big-commpany .nodedelete {
  display: none;
  position:absolute;
  top:0;
  right:0;
}

.Treant { position: relative; overflow: hidden; padding: 0 !important; }
.Treant > .node,
.Treant > .pseudo { position: absolute; display: block; visibility: hidden; }
.Treant.Treant-loaded .node,
.Treant.Treant-loaded .pseudo { visibility: visible; }
.Treant > .pseudo { width: 0; height: 0; border: none; padding: 0; }
.Treant .collapse-switch { width: 3px; height: 3px; display: block; border: 1px solid black; position: absolute; top: 1px; right: 1px; cursor: pointer; }
.Treant .collapsed .collapse-switch { background-color: #868DEE; }
.Treant > .node img { border: none;  }

.is-active {
  color:red;
}

.loader
{
  position: fixed;
  left: 50%;
  top: 35%;
  z-index: 1000;
  height: 31px;
  width: 31px;
}
.divloader
{

  left: 50%;
}

.login-form {
  width: 340px;
  margin: 140px auto;
}
.login-form form {
  margin-bottom: 15px;
  padding: 20px;
}
.login-form h2 {
  margin: 0 0 15px;
}
.form-control, .btn {
  min-height: 38px;
  border-radius: 2px;
}
.btn {
  font-size: 15px;
  font-weight: bold;
}

.ant-layout-sider-has-trigger {
  padding-bottom: 0px !important;
}

.applist {
  background: #343a40;
  padding: 5px;
}

.flex-item {
  text-align: center;
}

#profileTable .ant-table-body {
  height: 515px;
}
#profileTable .ant-table {
  font-size: 12px;
}


.demo {
  /* for IE10+ touch devices */
  touch-action:none;
}

/** ELEMENT POSITIONS **/
#dragDropWindow1 { top:76px;left:100px; }
#dragDropWindow2 { top:148px; left:600px; }
#dragDropWindow3 { top:340px; left:100px; }
#dragDropWindow4 { top:416px; left:600px; }

/** ELEMENTS **/
.drag-drop-demo .window {
  font-family: serif;
  font-size: 10px;
  background-color: white;
  border: 1px solid #346789;
  text-align: center;
  z-index: 24;
  cursor: pointer;
  box-shadow: 2px 2px 19px #aaa;
  -o-box-shadow: 2px 2px 19px #aaa;
  -webkit-box-shadow: 2px 2px 19px #aaa;
  -moz-box-shadow: 2px 2px 19px #aaa;
  -moz-border-radius: 0.5em;
  border-radius: 0.5em;
  position: absolute;
  color: black;
  padding-top: 5px;
  width: 90px;
  height: 35px;
  line-height: 12px;
  -webkit-transition: -webkit-box-shadow 0.15s ease-in;
  -moz-transition: -moz-box-shadow 0.15s ease-in;
  -o-transition: -o-box-shadow 0.15s ease-in;
  transition: box-shadow 0.15s ease-in;
  word-wrap: break-word;
}

.window:hover {
  border:1px solid #123456;
  box-shadow: 2px 2px 19px #444;
  -o-box-shadow: 2px 2px 19px #444;
  -webkit-box-shadow: 2px 2px 19px #444;
  -moz-box-shadow: 2px 2px 19px #fff;
  opacity:0.9;
}


.drag-drop-demo a, .drag-drop-demo a:visited {
  color:#057D9F;
}

.drag-drop-demo a:hover {
  color:orange;
}

/** LINKS IN WINDOWS **/
.drag-locked { border:1px solid red; }
.cmdLink { font-size:0.80em;}

/** DRAG/DROP CLASSES **/
.dragActive { border:2px dotted orange; }
.dropHover { border:1px dotted red; }

/** INFO WINDOW **/
#list {
  text-align: center;
  display: none;
  font-size: 90%;
  position: absolute;
  width: 500px;
  left: 50%;
  margin-left: -250px;
  top: 100px;
  background-color: white;
  padding: 5px;
  border: 1px solid #456;
  opacity: 0.8;
  border-radius: 8px;
  color: #444;
}
#list table { width:100%;}
#list table th, #list strong { color:black; font-size:12px; text-align: center; }

path, .jtk-endpoint { cursor:pointer; }

/*.ant-layout-content {
  overflow:hidden;
}*/

/*.ant-btn-primary:active, .ant-btn-primary.active {
  color: #fff;
  background-color: #008000;
  border-color: #008000;
}

.ant-radio-group-solid .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):active {
    color: #fff;
    background: #008000;
    border-color: #008000;
}

.ant-radio-group-solid .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled) {
    color: #fff;
    background: #008000;
    border-color: #008000;
}

.ant-btn-primary {
    color: #fff;
    background-color: #008000;
    border-color: #008000;
    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12);
    box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
}*/
.navbar .home-logo {
    color: #ff5722 !important;
    font-weight: bold;
}

#applicationSelect {
    min-width: 155px;
    border: 1px solid rgba(255, 255, 255, .5);
    border-radius: 4px;
}

.sidebar .nav-link {
  color: white;
}

.active {
  color: #1890ff !important;
}

.ant-radio-group-solid .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled) {
    color: #fff;
    background: #6c757d;
    border-color: #6c757d;
}

.ant-radio-button-wrapper-checked:hover {
  color: #fff;
    background: #6c757d;
    border-color: #6c757d;
}

.ant-radio-group-solid .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover {
    color: #fff;
    background: #6c757d;
    border-color: #6c757d;
  color: #fff;
    background: #6c757d;
    border-color: #6c757d;
}

.ant-form-item {
  margin-bottom: 6px !important;
}

 /* The style of the selected table row */
.clickRowStyl{
  background-color: #f0f0f5;
}
.ant-table-tbody>.clickRowStyl:hover>td{
  background-color: #f0f0f5;
}


.rebortTable table >thead > tr > th {
  background-color:  #f0f0f5;
}

.disabled {
  opacity: 0.4;
}

.ant-layout {
  display: flex;
  flex: auto;
  flex-direction: column;
  min-height: 0;
  background: none;
}

.nav-item {
  font-size: 13px;
}

.ant-tabs-bar {
    margin: 0 0 2px 0 !important;
    border-bottom: 1px solid #e8e8e8;
    outline: none;
    -webkit-transition: padding 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
    transition: padding 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
}

#sidebar {
  min-width: 100px;
  max-width: 100px;
  -webkit-transition: all 0.3s;
  -o-transition: all 0.3s;
  transition: all 0.3s;
  position: relative;
}

#sidebar.active .btn.btn-primary:before {
  content: "\f054";
  font-family: "FontAwesome";
  left: 2px !important;
}
#sidebar.active .btn.btn-primary:after {
    display: none;
}

@media (max-width: 991.98px) {
    #sidebar {
      margin-left: -300px;
    }
    #sidebar.active {
      margin-left: 0;
    }
    #sidebar .custom-menu {
      margin-right: -60px !important;
      top: 10px !important;
    }
}

#graph tspan {
  font-size: 12px
}

svg {
   font-family:  Arial, Helvetica, sans-serif;
}

#close {
  float:right;
  display:inline-block;
  padding:2px 5px;
}

.workflow-details {
  border:1px solid #e8e8e8;
  -moz-border-radius-topright:5px;
    -moz-border-radius-topleft:5px;
    -webkit-border-top-right-radius:5px;
    -webkit-border-top-left-radius:5px;
    border-top-left-radius:5px;
    border-top-right-radius:5px;
}

.workflow-details span {
  background:#e8e8e8;color:white;padding:10px;
}

div.tooltip {
    position: absolute;
    text-align: center;
    width: 60px;
    height: 28px;
    padding: 2px;
    font: 12px sans-serif;
    border: 0px;
    border-radius: 8px;
    pointer-events: none;
}

.dataflow-tbl-wrapper {
 }

.dataflow-tbl-controls i {
  padding: 2px;
  position: relative;
  z-index: 99;
}

